--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Run sign
         run: |
+          export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python3 ./dailyFudan.py '${{ secrets.FUDAN }}'
