--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run sign
         run: |
           export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+          export OPENSSL_CONF=./openssl.cnf
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python3 ./dailyFudan.py '${{ secrets.FUDAN }}'
